--- a/ReciclaAe/app/src/main/res/values/strings.xml
+++ b/ReciclaAe/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Reciclaê!</string>
+    <string name="app_name">Eco Localização</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
-    <string name="about">Este projeto tem como objetivo te ajudar a encontrar pontos de coletas em sua cidade.\n\nEste aplicativo e o site são de código aberto, sob licença MIT.\n\nO código pode ser encontrado em https://github.com/aron-bordin/Recicla-Ponto-de-Coleta</string>
+    <string name="about">Eco Localização tem como objetivo te ajudar a encontrar pontos de coletas em sua cidade.\n\nEste aplicativo e o site são de código aberto, sob licença MIT.\n\nO código pode ser encontrado em https://github.com/aron-bordin/Recicla-Ponto-de-Coleta</string>
     <string name="me">Projeto desenvolvido por Aron Barreira Bordin
         \n\naron.bordin@gmail.com
         \nhttp://aronbordin.com
@@ -15,4 +15,6 @@
     <string name="vidro">Vidro</string>
     <string name="todos">Todos</string>
     <string name="by">Desenvolvido por Aron Barreira Bordin</string>
+    <string name="title_activity_asasdasd">asasdasdActivity</string>
+    <string name="gps_desativado">Para utilizar as funções de localização, ative seu GPS</string>
 </resources>
